# python-fauxjson

./: .gitignore  README.md  pyproject.toml  requirements.txt
fauxjson/: __init__.py  cfjson.py
